# sortai

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
sortai/: __init__.py  ai.py  cli.py  organizer.py  reader.py
src/gitlog_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/logcraft/: __init__.py  changelog.py  cli.py  git_utils.py
src/logcraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
