[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sortai"
version = "0.1.1"
description = "LLM-powered directory organizer using Google Gemini"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "sortai" }]
keywords = ["cli", "organize", "files", "gemini", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "google-genai>=0.2.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0",
]

[project.scripts]
sortai = "sortai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sortai*"]
